[package]
name = "json-ld-rs"
version = "0.1.0"
authors = ["axion014 <axion014@gmail.com>"]
edition = "2018"

[features]

reqwest-loader = ["reqwest", "http-link", "mime", "lazy_static"]

[dependencies]

async-recursion = "0.3"
json-trait = { git = "https://github.com/axion014/json-trait" }
cc-traits = { git = "https://github.com/axion014/cc-traits", branch = "serde-json-map"}
maybe-owned = "0.3.4"
elsa = "1.4"
once_cell = "1.7.2"
if_chain = "1.0.1"
url = { version = "2.2.1" }

reqwest = { version = "0.10.6", optional = true }
http-link = { version = "1.0.0", optional = true }
mime = { version = "0.3", optional = true }
lazy_static = { version = "1.4", optional = true }

json = { version = "0.12.4", optional = true }
serde_json = { version = "1.0", optional = true }