[package]
name = "json-ld-rs"
version = "0.1.0"
authors = ["axion014 <axion014@gmail.com>"]
edition = "2018"

[features]

reqwest-loader = ["reqwest", "http-link", "mime", "lazy_static"]

[dependencies]

async-recursion = "0.3"
futures = "0.3"
json-trait = { git = "https://github.com/axion014/json-trait" }
cc-traits = { git = "https://github.com/axion014/cc-traits", branch = "serde-json-map"}
hashmap-entry-ownable = { version = "0.2.0", features = ["nightly"] }
maybe-owned = "0.3.4"
elsa = { git = "https://github.com/axion014/elsa", branch = "set" }
once_cell = "1.7.2"
if_chain = "1.0.1"
url = { version = "2.2.1" }

reqwest = { version = "0.11.3", optional = true }
http-link = { version = "1.0.0", optional = true }
mime = { version = "0.3", optional = true }
lazy_static = { version = "1.4", optional = true }

json = { version = "0.12.4", optional = true }
serde_json = { version = "1.0", optional = true }

[dev-dependencies]
async-recursion = "0.3"
futures = "0.3"
json-trait = { git = "https://github.com/axion014/json-trait", features = ["impl_serde_json"] }
tokio = { version = "1.6.1", features = ["rt-multi-thread", "macros"] }
lazy_static = { version = "1.4" }
serde_json = { version = "1.0", features = ["preserve_order"] }
json-ld-rs = { path = ".", features = ["reqwest-loader"] }
json-ld-rs-stable = { git = "https://github.com/axion014/json-ld-rs", features = ["reqwest-loader"], package = "json-ld-rs" }

[[test]]

name = "test"
harness = false